docs: adding docs for posts and users endpoints
